# loome

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
examples/: avionics_harness.py  fuses.py  lrus.py  minimal.py
examples/n14ev/: avionics_harness.py  avionics_harness.wires.yaml  disconnects.py  lights.py  lrus.py  power.py  switches.py
examples/n14ev_axis/: avionics_harness.py  avionics_harness.wires.yaml  disconnects.py  lrus.py  power.py  switches.py
examples/n14ev_g3x/: avionics_harness.py  avionics_harness.wires.yaml  disconnects.py  lights.py  lrus.py  power.py  sensors.py
src/loome/: __init__.py  bom.py  bundles.py  buses.py  cli.py  constants.py  disconnects.py  harness.py  helpers.py  model.py  ports.py  switches.py  validators.py  wire_ids.py
src/loome/_internal/: __init__.py  attachments.py  endpoints.py  names.py  shields.py  systems.py
src/loome/components/: __init__.py  axis.py  garmin.py  gtn650.py  sds.py  switches.py
src/loome/layout/: bundle_layout.py  engine.py  geometry.py  ordering.py
src/loome/renderers/: builder.py  bundle.py  colors.py  context.py  (+4 more)
tests/: conftest.py  test_bom.py  test_bundles.py  test_can_bus_line.py  test_cli.py  test_disconnects.py  test_internal_helpers.py  test_layout_ordering.py  test_length_derivation.py  test_ports.py  test_renderer_context.py  test_schematic_golden.py  test_sds.py  test_units.py  test_validators.py  test_wire_ids.py
tests/fixtures/: schematic_spec.py  schematic_spec.wires.yaml
(+6 files in other folders)
