[project]
name = "loome"
version = "0.2.0"
description = "Python framework for describing and visualizing wiring harnesses"
readme = "README.md"
authors = [
    { name = "Erik Hasse", email = "erik.g.hasse@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "natsort>=8.4.0",
    "svgwrite>=1.4.3",
]

[dependency-groups]
dev = [
    "pdfplumber>=0.11.9",
    "pytest>=8.0",
]

[project.scripts]
loome = "loome.cli:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # Pyflakes + pycodestyle = flake8
    "E", "W",  # Pycodestyle
    "F",  # Pyflakes
    "PL",  # Pylint
    "I",  # Isort
]
ignore = [
    "PLR",  # Pylint refactor
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused import

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
